Fix spacing issue in Quiz component (in sidebar)

--- a/src/components/core/UI/style/Sidebar.module.css
+++ b/src/components/core/UI/style/Sidebar.module.css
@@ -4,4 +4,5 @@
   margin: 0;
   padding: 2rem;
   width: 12.5rem;
+  overflow: scroll;
 }
